Header sticky fixed on mobile and theme color changed

--- a/src/style/3-components/_header.scss
+++ b/src/style/3-components/_header.scss
@@ -121,7 +121,6 @@ header {
     height: 80px;
 
     nav {
-      position: fixed;
       top: 0;
       width: 100%;
       height: 80px;
